[metadata]

name = ordpy
version = 1.1.0
url = https://github.com/arthurpessa/ordpy
author = Arthur A. B. Pessa and Haroldo V. Ribeiro
author_email = arthur_pessa@hotmail.com, hvr@uem.dfi.br
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A Python package for data analysis with permutation entropy and ordinal network methods
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
python_requires = >=3.6
